# explorador-da-internet

./: .gitignore  README.md  grafo_da_rede.graph  requisitos.md
.github/workflows/: static.yml
cartografo/: index.html  script.js  style.css
cartografo-cpp/: CMakeLists.txt
cartografo-cpp/resources/: app.qrc
cartografo-cpp/src/: main.cpp
cartografo-cpp/src/Core/: data_types.h  geoip_client.cpp  geoip_client.h  graph_manager.cpp  graph_manager.h  logging.cpp  logging.h  traceroute_task.cpp  traceroute_task.h
cartografo-cpp/src/GUI/: details_panel.cpp  details_panel.h  details_panel.ui  edge_item.cpp  edge_item.h  main_window.cpp  main_window.h  main_window.ui  map_view.cpp  map_view.h  new_exploration_dialog.cpp  new_exploration_dialog.h  new_exploration_dialog.ui  node_item.cpp  node_item.h  welcome_dialog.cpp  welcome_dialog.h  welcome_dialog.ui
cartografo-cpp/tests/: CMakeLists.txt  test_example.cpp
explorador/: explorer.py
